--- a/src/Home/style.module.css
+++ b/src/Home/style.module.css
@@ -1,5 +1,10 @@
 .homeWrapper{
     width: 100%;
     height: 100vh;
-    background-color: red;
+    background-image: linear-gradient(180deg, rgba(255,255,255,0) 60%, rgba(234,237,237,1) 100%), url("../assets/images/home.jpg");
+    background-size: cover;
+    background-position: center;
+    color: white;
+
 }
+
