--- a/src/Home/style.module.css
+++ b/src/Home/style.module.css
@@ -1,10 +1,21 @@
-.homeWrapper{
+.homeContainer{
     width: 100%;
-    height: 100vh;
-    background-image: linear-gradient(180deg, rgba(255,255,255,0) 60%, rgba(234,237,237,1) 100%), url("../assets/images/home.jpg");
+    height: auto;
+    margin: 0;
+}
+
+.homeBanner{
+    background-image: url("../assets/images/home.jpg");
+    min-height: 500px;
     background-size: cover;
     background-position: center;
-    color: white;
+    mask-image: linear-gradient(to bottom, rgba(0,0,0,1),rgba(0,0,0,0));
+}
 
+.productsContainer{
+    width: 100%;
+    position: absolute;
+    display: flex;
+    top:50%
 }
 
