--- a/src/Product/style.module.css
+++ b/src/Product/style.module.css
@@ -2,8 +2,12 @@
 
 .productWrapper{
     background-color: rgb(255, 255, 255);
-    height: 300px;
-    width: 30%;
-    margin-left:30px;
+    height: 450px;
+    width: 23%;
+    margin-left:23px;
     display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 30px;
 }
+
