--- a/src/Home/style.module.css
+++ b/src/Home/style.module.css
@@ -2,6 +2,7 @@
     width: 100%;
     height: auto;
     margin: 0;
+    background-color: #eaeded;
 }
 
 .homeBanner{
@@ -20,7 +21,7 @@
 .productsContainer{
     width: 100%;
     display: flex;
-    margin-top:250px;
+    margin-top:200px;
     flex-wrap: wrap;
 
 }
