added login component and styled it, added logos, added authentication on firebase

--- a/src/Header/style.module.css
+++ b/src/Header/style.module.css
@@ -1,13 +1,22 @@
 .logoSearch{
     width: 65%;
     display: flex;
-    justify-content: space-between;
     align-items: center;
     align-content: center;
+  
 }
 
 .logo{
-    padding: 10px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    align-content: center;
+
+}
+
+.headerLogo{
+    margin-top: 20px;
+    width: 100px;
 }
 
 .navContainer{
