--- a/src/Checkout/style.module.css
+++ b/src/Checkout/style.module.css
@@ -6,7 +6,7 @@
 
 
 .left{
-    width: 65%;
+    width: 67%;
     height: 100%;
     padding: 20px;
 }
@@ -20,9 +20,13 @@
 }
 
 .right{
-    width: 35%;
+    width: 33%;
     height: 100%;
     padding: 25px;
 
+}
+
+.checkoutTitles,hr{
+    margin-left: 30px;
 }
 
